<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.blosa.cafe.MainActivity"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/lbl1" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chk2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/cantidad" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="63dp">

            <Button
                android:id="@+id/button"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:onClick="decrement"
                android:text="@string/resta" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="33dp"
                android:layout_height="wrap_content"
                android:text="@string/valorinicial"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button2"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:onClick="increment"
                android:text="@string/suma" />
        </GridLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mostrarPedido"
            android:text="@string/submit1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
